--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,10 @@ enable_cxx_compiler_flag_if_supported("-Wextra")
 enable_cxx_compiler_flag_if_supported("-pedantic")
 enable_cxx_compiler_flag_if_supported("-std=c++11")
 enable_cxx_compiler_flag_if_supported("-O3")
-enable_cxx_compiler_flag_if_supported("-fopenmp")
+#enable_cxx_compiler_flag_if_supported("-fopenmp")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qopenmp")
+
+
 
 file(GLOB SOURCES *.h *.cpp)
 
